force-app/main/default/objects/ssot__AcademicTermRegstrnTimeline__dlm/fields/ssot__RegistrationCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegistrationCloseDate__c</fullName>
    <label>Registration Close Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegistrationCloseDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>