force-app/main/default/objects/ssot__AcademicTermRegstrnTimeline__dlm/fields/ssot__RegistrationOpenDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegistrationOpenDate__c</fullName>
    <label>Registration Open Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegistrationOpenDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>