force-app/main/default/objects/ssot__AcademicTermRegstrnTimeline__dlm/fields/ssot__rel_1731039790876_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039790876_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcademicTermRegstrnTimeline_Academic_rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>AcademicTermRegstrnTimeline_Academic_rel</relationshipLabel>
    <relationshipName>rel_1731039790876_end</relationshipName>
    <type>Lookup</type>
</CustomField>