force-app/main/default/objects/ssot__AcademicTermRegstrnTimeline__dlm/fields/ssot__StudentAcademicLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__StudentAcademicLevel__c</fullName>
    <label>Student Academic Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StudentAcademicLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>